compiler/testData/diagnostics/tests/override/AbstractValNotImplemented.jet
abstract class A {
    abstract val i: Int
}

class <!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>B<!>() : A() {
}
